--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
     ></script>
 
-    <title>Model Control with WASD</title>
+    <title>MedScope 3D</title>
+
+
     <style>
       #ar-button {
         width: 120px;
@@ -23,6 +25,21 @@
         border: none;
         font-size: 20px;
         z-index: 10;
+        border-radius: 10%;
+    }
+    
+    #scan-button {
+        width: 120px;
+        height: 60px;
+        position: absolute;
+        left: 35px;
+        bottom: 35px;
+        background-color: rgb(64, 203, 203);
+        color: white;
+        border: none;
+        font-size: 20px;
+        z-index: 10;
+        border-radius: 10%;
       }
     </style>
   </head>
@@ -38,7 +55,8 @@
       scale="0.1 0.1 0.1"
       auto-rotate="false"
     >
-      <button id="ar-button" slot="ar-button">Start AR</button>
+      <button id="ar-button" slot="ar-button">Open AR</button>
+      <button id="scan-button">Scan Object</button>
     </model-viewer>
 
     <script>
