changed VR mode

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </model-viewer>
 
     <button id="cut-kidney-btn">Cut Kidney</button>
+    <button id="ar-cut-kidney-btn" class="ar-cut-button">Cut Kidney</button>
+
 
     <input type="file" id="file-input" accept="image/*" capture="environment" style="display:none;">
     <video id="camera-preview" autoplay style="display:none;"></video>
