--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </header>
 
         <select id="model-selector">
+          <option value="models/realistic_human_heart.glb">Heart</option>
             <option value="models/brain.glb">Brain</option>
-            <option value="models/realistic_human_heart.glb">Heart</option>
             <option value="models/kidney.glb">Kidney</option>
           </select>
 
     <model-viewer
       id="viewer"
-      src="models/brain.glb"
+      src="models/realistic_human_heart.glb"
       style="width: 100vw; height: 90vh"
       camera-controls
       shadow-intensity="2"
